architecture-ide/tests/fixtures/negative/S3_then_var_not_bound.sync
sync Bad

  when
    Counter/inc: [ ] => [ total: ?total ]
  then
    Log/append: [ event: ?mystery ]
